2009-03-12	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1385/cpukit
	* cpu_asm.S: When the type rtems_boolean was switched to the C99 bool,
	the size changed from 4 bytes to 1 byte. The interrupt dispatching
	code accesses two boolean variables for scheduling purposes and the
	assembly implementations of this code did not get updated.

2009-02-12	Joel Sherrill <joel.sherrill@oarcorp.com>

	* rtems/score/cpu.h: Change prototype of IDLE thread to consistently
	return void * and take a uintptr_t argument.

2009-02-11	Joel Sherrill <joel.sherrill@oarcorp.com>

	* cpu.c, rtems/score/cpu.h: Eliminate _CPU_Thread_dispatch_pointer and
	passing address of _Thread_Dispatch to _CPU_Initialize. Clean up
	comments.

2008-12-17	Ralf Corsépius <ralf.corsepius@rtems.org>

	* rtems/score/m68k.h: Don't include rtems/score/types.h,
	rtems/stdint.h.

2008-09-19	Joel Sherrill <joel.sherrill@oarcorp.com>

	* rtems/score/m68k.h: Move set cacr, acr0, acr1 routines here to get
	them out of a BSP.

2008-09-11	Ralf Corsépius <ralf.corsepius@rtems.org>

	* rtems/score/types.h: Do not define boolean, single_precision,
	double_precision unless RTEMS_DEPRECATED_TYPES is given.

2008-09-08	Joel Sherrill <joel.sherrill@oarcorp.com>

	* cpu.c, rtems/score/cpu.h: Remove extraneous spaces.

2008-08-21	Ralf Corsépius <ralf.corsepius@rtems.org>

	* rtems/score/types.h: Include stdbool.h.
	Use bool as base-type for boolean.

2008-08-19	Joel Sherrill <joel.sherrill@OARcorp.com>

	* rtems/score/cpu.h: Fix type when initializing FP context.

2008-08-19	Joel Sherrill <joel.sherrill@OARcorp.com>

	* cpu.c, rtems/score/cpu.h: Add extern for bfffo table and rename it to
	indicate that it is specific to this architecture.

2008-07-31	Joel Sherrill <joel.sherrill@OARcorp.com>

	* rtems/score/cpu.h: Correct prototype of Idle threads.

2008-07-09	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* rtems/m68k/m68360.h: added port b pin definitions for SPI

2008-06-13	Joel Sherrill <joel.sherrill@oarcorp.com>